# forme-svelte

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  package-lock.json
.github/scripts/: check-pdf-size.sh  size-check-fixture.json
.github/workflows/: ci.yml
docs/: accessibility.mdx  api-reference.mdx  archival.mdx  charts.mdx  components.mdx  digital-signatures.mdx  docs.json  faq.mdx  fonts.mdx  forms.mdx  go-sdk.mdx  migrating-from-react-pdf.mdx  page-breaks.mdx  python-sdk.mdx  quickstart.mdx  rust-sdk.mdx  self-hosting.mdx  styles.mdx  svelte.mdx  tailwind.mdx  template-gallery.mdx  templates.mdx  typescript-sdk.mdx
docs/agents/: domain.md  triage-labels.md
docs/api-reference/: certify.mdx  merge.mdx  rasterize.mdx  redact.mdx  render.mdx  sign.mdx
docs/changelog/: 0-8-3.mdx  0-9-0.mdx
docs/concepts/: audit-trail.mdx  credentials.mdx  digital-certification.mdx  documents.mdx  redaction-templates.mdx  redaction.mdx
docs/guides/: bring-your-own-ui.mdx  migrating-to-0-9.mdx
engine/: CHANGELOG.md  Cargo.toml  README.md
engine/src/: barcode.rs  lib.rs  wasm.rs  wasm_raw.rs
engine/src/chart/: area.rs  bar.rs  dot.rs  line.rs  mod.rs  pie.rs
engine/src/font/: fallback.rs  metrics.rs  mod.rs
engine/src/layout/: mod.rs
engine/src/model/: mod.rs
engine/src/pdf/: certify.rs  merge.rs  mod.rs  redaction.rs  signing.rs  tagged.rs  xmp.rs
engine/src/style/: mod.rs
engine/src/svg/: mod.rs
engine/src/text/: mod.rs
engine/tests/: integration.rs  visual_regression.rs
rasterizer/: .gitignore  Cargo.toml  Dockerfile
rasterizer/src/: main.rs
scripts/: bump-version.sh  publish-0.8.3.sh  stress-test.tsx
server/: CHANGELOG.md  Cargo.toml  Dockerfile  RELEASE.md  docker-compose.yml
server/src/: config.rs  errors.rs  lib.rs  main.rs
server/src/middleware/: auth.rs
server/src/routes/: certify.rs  merge.rs  mod.rs  rasterize.rs  redact.rs  render.rs  resources.rs  sign.rs
server/tests/: integration.rs
templates/: 081-fixes-demo.tsx  charts-showcase.tsx  letter-data.json  letter.tsx  report.tsx  shipping-label.tsx
