[package]
name = "forme-pdf"
version = "0.8.2"
edition = "2021"
description = "A page-native PDF rendering engine. Layout INTO pages, not onto an infinite canvas."
license = "MIT"
repository = "https://github.com/formepdf/forme"
homepage = "https://formepdf.com"
documentation = "https://docs.rs/forme-pdf"
readme = "README.md"
keywords = ["pdf", "wasm", "layout", "document", "report"]
categories = ["rendering", "encoding", "wasm"]
exclude = [
    "target/",
    "tests/references/",
    "output.pdf",
]

[dependencies]
# Compression for PDF content streams
miniz_oxide = "0.7"
# Serialization for document input
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# --- Future dependencies (uncomment when needed) ---
ttf-parser = "0.25"         # Real font metrics + subsetting
rustybuzz = "0.20"          # OpenType shaping (GSUB/GPOS) — pure Rust, WASM-safe
unicode-linebreak = "0.1" # UAX#14 line break algorithm
unicode-bidi = "0.3"       # UAX#9 BiDi algorithm
unicode-script = "0.5"     # Script detection for BiDi run splitting
hypher = { version = "0.1", default-features = false, features = ["full"] }
qrcode = "0.14"            # QR code generation — pure Rust, no_std compatible
barcoders = { version = "2", default-features = false }  # 1D barcode generation — no_std, zero deps
quick-xml = "0.37"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"

# Digital signature support
sha2 = { version = "0.10", features = ["oid"] }
rsa = "0.9"
x509-cert = { version = "0.2", features = ["pem"] }
cms = "0.2"
const-oid = "0.9"
der = { version = "0.7", features = ["alloc", "pem"] }
pem-rfc7468 = "0.7"
pkcs8 = { version = "0.10", features = ["pem"] }
signature = "2"

getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen", "getrandom"]
wasm-raw = []  # C-ABI exports for non-JS WASM hosts (Python wasmtime, Go wazero)
visual-tests = []

[lib]
name = "forme"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "forme"
path = "src/main.rs"

[dev-dependencies]
rcgen = "0.13"

[profile.release]
opt-level = 3
lto = true
