[package]
name = "forme-rasterizer"
version = "0.10.4"
edition = "2021"
description = "PDFium-based PDF rasterizer sidecar for the Forme dashboard"

[[bin]]
name = "forme-rasterizer"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
pdfium-render = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
strip = true
