[package]
name = "forme-server"
version = "0.10.4"
edition = "2021"
description = "Self-hosted PDF rendering API — no database, no dependencies, just Docker"

[[bin]]
name = "forme-server"

[dependencies]
forme-pdf = { path = "../engine" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"

[dev-dependencies]
axum-test = "19"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
